// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTradeQuotePolling() When wallet is NOT connected Then the "useAddress" field in the quote request should be 0x000...0000 1`] = `
{
  "appData": "0x67e14fb94bf7d70b1d7822a861a33c0ca9d7d2db930869f1c65bf32176d95dad",
  "appDataHash": undefined,
  "buyToken": "0x91056D4A53E1faa1A84306D4deAEc71085394bC8",
  "from": "0x0000000000000000000000000000000000000000",
  "kind": "sell",
  "partiallyFillable": false,
  "priceQuality": "optimal",
  "receiver": "0x0000000000000000000000000000000000000000",
  "sellAmountBeforeFee": "10000000",
  "sellToken": "0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6",
  "validTo": undefined,
}
`;

exports[`useTradeQuotePolling() When wallet is connected Then should put account address into "useAddress" field in the quote request 1`] = `
{
  "appData": "0x67e14fb94bf7d70b1d7822a861a33c0ca9d7d2db930869f1c65bf32176d95dad",
  "appDataHash": undefined,
  "buyToken": "0x91056D4A53E1faa1A84306D4deAEc71085394bC8",
  "from": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
  "kind": "sell",
  "partiallyFillable": false,
  "priceQuality": "optimal",
  "receiver": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
  "sellAmountBeforeFee": "10000000",
  "sellToken": "0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6",
  "validTo": undefined,
}
`;
